2007-09-06  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/octave.lang: try to not misdetect
	the transpose operator as the start of a string and other minor
	fixes. Bug #413940.

2007-09-04  Juerg Billeter  <j@bitron.ch>

	* gtksourceview/language-specs/Makefile.am:
	* gtksourceview/language-specs/vala.lang:
	* po/POTFILES.in:
	Add syntax highlighting file for Vala. Fixes #471058.

2007-09-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c (container_context_starts_here):
	Make sure it does not go into an infinite loop in case of zero-length
	match. Fixes #473123.

2007-09-01  Paolo Maggi  <paolo@gnome.org>

	* MAINTAINERS:
	* AUTHORS: updated to new format

2007-08-28  Paolo Maggi  <paolo@gnome.org>

	Style schemes can now optionally define the color of the right margin
	line and overlay using the "right-margin" style.
	The foreground color is used for the line, while the background one,
	if defined, is used for the overlay.
	If no background color is set the overlay is disabled.
	A 40/255 alpha value is applied to the line color and a 15/255 one is
	applied to the overlay color.

	* gtksourceview/gtksourcestylescheme.[ch]
	(_gtk_source_style_scheme_get_right_margin_style): new function
	to get the right-margin style

	* gtksourceview/gtksourceview.c (gtk_source_view_class_init),
	(gtk_source_view_init), (gtk_source_view_finalize),
	(gtk_source_view_expose), (update_right_margin_colors),
	(gtk_source_view_realize), (gtk_source_view_update_style_scheme):
	kill the old style properties and use the right-margin style

	* gtksourceview/language-specs/oblivion.xml:
	* gtksourceview/language-specs/tango.xml: set right-margin style

=== gtksourceview 1.90.4 ===

2007-08-28  Paolo Borelli  <pborelli@katamail.com>

	* NEWS:
	* README:
	* configure.ac:

	GtkSourceView 1.90.4 released.

2007-08-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/sh.lang: the line-comment context is