@@ -148,6 +148,7 @@
                 <context ref="xml:doctype"/>
                 <context ref="xml:entity"/>
                 <context ref="xml:character-reference"/>
+                <context ref="xml:cdata"/>
                 <context ref="comment"/>
                 <context ref="dtd"/>
                 <context ref="script"/>
