@@ -38,7 +38,10 @@
     <style id="some-thing" _name="No idea what it is" map-to="def:preprocessor"/>
   </styles>
 
+  <default-regex-options case-sensitive="false"/>
+
   <definitions>
+
     <context id="oracle-built-in-datatypes" style-ref="type">
       <keyword>N?VARCHAR2</keyword>
       <keyword>NUMBER</keyword>
@@ -54,6 +57,7 @@
       <keyword>BFILE</keyword>
       <keyword>BINARY_(FLOAT|DOUBLE)</keyword>
     </context>
+
     <context id="ansi-datatypes" style-ref="type">
       <!-- FIXME no \n in patterns! -->
       <keyword>(NATIONAL[ \t\n]+)?CHAR(ACTER)?([ \t\n]+VARYING)?</keyword>
@@ -64,6 +68,7 @@
       <!-- FIXME no \n in patterns! -->
       <keyword>FLOAT|DOUBLE[ \t\n]+PRECISION|REAL</keyword>
     </context>
+
     <context id="sql-ds-and-db2-datatypes" style-ref="type">
       <keyword>CHARACTER</keyword>
       <!-- FIXME no \n in patterns! -->
@@ -72,6 +77,7 @@
       <keyword>INTEGER|SMALLINT</keyword>
       <keyword>FLOAT</keyword>
     </context>
+
     <context id="oracle-supplied-types" style-ref="type">
       <keyword>SYS\.ANY(TYPE|DATA(SET)?)</keyword>
       <keyword>XMLType</keyword>
@@ -80,6 +86,7 @@
       <keyword>ORDSYS\.ORD(Audio|Doc|Image(Signature)?|Video)</keyword>
       <keyword>SI_(StillImage|(Average|Positional)?Color|ColorHistogram|Texture|FeatureList)</keyword>
     </context>
+
     <context id="text-literals" style-ref="string">
       <start>([Nn]?[Qq]?|[Uu]?)'</start>
       <end>'</end>
@@ -88,36 +95,42 @@
         <context ref="def:line-continue"/>
       </include>
     </context>
+
     <context id="integer-literals" style-ref="decimal">
       <match>\b[0-9]+\b</match>
     </context>
+
     <context id="number-literals" style-ref="floating-point">
       <match>(\b[0-9]+(\.[0-9]+)?|\.[0-9]+)([Ee][\+-]?[0-9]+)?\b</match>
     </context>
+
     <context id="size-clause" style-ref="decimal">
       <match>\b[0-9]+[ \t]*([Kk]|[Mm]|[Gg]|[Tt])\b</match>
     </context>
+
     <context id="unlimited" style-ref="decimal">
       <keyword>UNLIMITED</keyword>
     </context>
+
     <context id="null" style-ref="decimal">
       <keyword>NULL</keyword>
     </context>
+
     <context id="block-comment" style-ref="comment">
       <start>/\*</start>
       <end>\*/</end>
       <include>
-        <context ref="def:escape"/>
-        <context ref="def:line-continue"/>
+        <context ref="def:in-line-comment"/>
       </include>
     </context>
+
     <context id="line-comment" style-ref="comment" end-at-line-end="true">
       <start>--</start>
       <include>
-        <context ref="def:escape"/>
-        <context ref="def:line-continue"/>
+        <context ref="def:in-line-comment"/>
       </include>
     </context>
+
     <context id="numeric-functions" style-ref="function">
       <keyword>ABS</keyword>
       <keyword>A(COS|SIN|TAN2?)</keyword>
@@ -138,6 +151,7 @@
       <keyword>TRUNC</keyword>
       <keyword>WIDTH_BUCKET</keyword>
     </context>
+
     <context id="character-functions-returning-character-values" style-ref="function">
       <keyword>N?CHR</keyword>
       <keyword>CONCAT</keyword>
@@ -152,16 +166,19 @@
       <keyword>TRANSLATE</keyword>
       <keyword>TREAT</keyword>
     </context>
+
     <context id="nls-character-functions" style-ref="function">
       <keyword>NLS_CHARSET_DECL_LEN</keyword>
       <keyword>NLS_CHARSET_(ID|NAME)</keyword>
     </context>
+
     <context id="character-functions-returning-number-values" style-ref="function">
       <keyword>ASCII</keyword>
       <keyword>INSTR</keyword>
       <keyword>LENGTH</keyword>
       <keyword>REGEXP_INSTR</keyword>
     </context>
+
     <context id="datetime-functions" style-ref="function">
       <keyword>ADD_MONTHS</keyword>
       <keyword>CURRENT_(DATE|TIMESTAMP)</keyword>
@@ -183,10 +200,12 @@
       <keyword>TRUNC</keyword>
       <keyword>TZ_OFFSET</keyword>
     </context>
+
     <context id="general-comparison-functions" style-ref="function">
       <keyword>GREATEST</keyword>
       <keyword>LEAST</keyword>
     </context>
+
     <context id="conversion-functions" style-ref="function">
       <keyword>ASCIISTR</keyword>
       <keyword>BIN_TO_NUM</keyword>
@@ -210,24 +229,29 @@
       <keyword>TRANSLATE</keyword>
       <keyword>UNISTR</keyword>
     </context>
+
     <context id="large-object-functions" style-ref="function">
       <keyword>BFILENAME</keyword>
       <keyword>EMPTY_(B|C)LOB</keyword>
     </context>
+
     <context id="collection-functions" style-ref="function">
       <keyword>CARDINALITY</keyword>
       <keyword>COLLECT</keyword>
       <keyword>POWERMULTISET(_BY_CARDINALITY)?</keyword>
     </context>
+
     <context id="hierarchical-function" style-ref="function">
       <keyword>SYS_CONNECT_BY_PATH</keyword>
     </context>
+
     <context id="data-mining-functions" style-ref="function">
       <keyword>CLUSTER_(ID|PROBABILITY|SET)</keyword>
       <keyword>FEATURE_(ID|SET|VALUE)</keyword>
       <keyword>PREDICTION</keyword>
       <keyword>PREDICTION_(COST|DETAILS|PROBABILITY|SET)</keyword>
     </context>
+
     <context id="xml-functions" style-ref="function">
       <keyword>(APPEND|INSERT)CHILDXML</keyword>
       <keyword>(DELETE|UPDATE)XML</keyword>
@@ -240,18 +264,21 @@
       <keyword>SYS_XML(AGG|GEN)</keyword>
       <keyword>XML(AGG|CDATA|COLATTVAL|COMMENT|CONCAT|ELEMENT|FOREST|PARSE|PI|QUERY|ROOT|SEQUENCE|SERIALIZE|TABLE|TRANSFORM)</keyword>
     </context>
+
     <context id="encoding-and-decoding-functions" style-ref="function">
       <keyword>DECODE</keyword>
       <keyword>DUMP</keyword>
       <keyword>ORA_HASH</keyword>
       <keyword>VSIZE</keyword>
     </context>
+
     <context id="null-related-functions" style-ref="function">
       <keyword>COALESCE</keyword>
       <keyword>LNNVL</keyword>
       <keyword>NULLIF</keyword>
       <keyword>NVL2?</keyword>
     </context>
+
     <context id="environment-and-identifier-functions" style-ref="function">
       <keyword>SYS_CONTEXT</keyword>
       <keyword>SYS_GUID</keyword>
@@ -260,6 +287,7 @@
       <keyword>USER</keyword>
       <keyword>USERENV</keyword>
     </context>
+
     <context id="aggregate-functions" style-ref="function">
       <keyword>AVG</keyword>
       <keyword>CORR(_(S|K))?</keyword>
@@ -280,6 +308,7 @@
       <keyword>(STDDEV|VAR)_(POP|SAMP)</keyword>
       <keyword>SUM</keyword>
     </context>
+
     <context id="analytic-functions" style-ref="function">
       <keyword>AVG</keyword>
       <keyword>CORR</keyword>
@@ -301,6 +330,7 @@
       <keyword>(STDDEV|VAR)_(POP|SAMP)</keyword>
       <keyword>SUM</keyword>
     </context>
+
     <context id="object-reference-functions" style-ref="function">
       <keyword>DEREF</keyword>
       <keyword>MAKE_REF</keyword>
@@ -308,12 +338,14 @@
       <keyword>REFTOHEX</keyword>
       <keyword>VALUE</keyword>
     </context>
+
     <context id="model-functions" style-ref="function">
       <keyword>CV</keyword>
       <keyword>ITERATION_NUMBER</keyword>
       <keyword>PRESENT(NN)?V</keyword>
       <keyword>PREVIOUS</keyword>
     </context>
+
     <context id="ansi-reserved-words" style-ref="keyword">
       <keyword>ADD</keyword>
       <keyword>ALL</keyword>
@@ -324,8 +356,10 @@
       <keyword>ASC</keyword>
       <keyword>BETWEEN</keyword>
       <keyword>BY</keyword>
+      <keyword>CASE</keyword>
       <keyword>CHECK</keyword>
       <keyword>CREATE</keyword>
+      <keyword>CROSS</keyword>
       <keyword>CURRENT</keyword>
       <keyword>DECIMAL</keyword>
       <keyword>DEFAULT</keyword>
@@ -333,31 +367,39 @@
       <keyword>DISTINCT</keyword>
       <keyword>DROP</keyword>
       <keyword>ELSE</keyword>
+      <keyword>END</keyword>
       <keyword>FLOAT</keyword>
       <keyword>FOR</keyword>
       <keyword>FROM</keyword>
+      <keyword>FULL</keyword>
       <keyword>GRANT</keyword>
       <keyword>GROUP</keyword>
       <keyword>HAVING</keyword>
       <keyword>IMMEDIATE</keyword>
-      <keyword>IN</keyword>
+      <keyword>INNER</keyword>
       <keyword>INSERT</keyword>
       <keyword>INTEGER</keyword>
       <keyword>INTERSECT</keyword>
       <keyword>INTO</keyword>
+      <keyword>IN</keyword>
       <keyword>IS</keyword>
+      <keyword>JOIN</keyword>
+      <keyword>LEFT</keyword>
       <keyword>LEVEL</keyword>
       <keyword>LIKE</keyword>
+      <keyword>NATURAL</keyword>
       <keyword>NOT</keyword>
       <keyword>OF</keyword>
       <keyword>ON</keyword>
       <keyword>OPTION</keyword>
-      <keyword>OR</keyword>
       <keyword>ORDER</keyword>
+      <keyword>OR</keyword>
+      <keyword>OUTER</keyword>
       <keyword>PRIOR</keyword>
       <keyword>PRIVILEGES</keyword>
       <keyword>PUBLIC</keyword>
       <keyword>REVOKE</keyword>
+      <keyword>RIGHT</keyword>
       <keyword>ROWS</keyword>
       <keyword>SELECT</keyword>
       <keyword>SESSION</keyword>
@@ -370,19 +412,25 @@
       <keyword>UNION</keyword>
       <keyword>UNIQUE</keyword>
       <keyword>UPDATE</keyword>
+      <keyword>USING</keyword>
       <keyword>VALUES</keyword>
       <keyword>VIEW</keyword>
+      <keyword>WHEN</keyword>
       <keyword>WITH</keyword>
     </context>
+
     <context id="oracle-reserved-words" style-ref="keyword">
       <keyword>ACCESS</keyword>
       <keyword>AUDIT</keyword>
       <keyword>CLUSTER</keyword>
       <keyword>COMMENT</keyword>
       <keyword>COMPRESS</keyword>
+      <keyword>CONNECT[ \t]+BY</keyword>
+      <keyword>CUBE</keyword>
       <keyword>EXCLUSIVE</keyword>
       <keyword>EXISTS</keyword>
       <keyword>FILE</keyword>
+      <keyword>GROUPING[ \t]+SETS</keyword>
       <keyword>IDENTIFIED</keyword>
       <keyword>INCREMENT</keyword>
       <keyword>INDEX</keyword>
@@ -395,21 +443,26 @@
       <keyword>MODIFY</keyword>
       <keyword>NOAUDIT</keyword>
       <keyword>NOCOMPRESS</keyword>
+      <keyword>NOCYCLE</keyword>
       <keyword>NOWAIT</keyword>
       <keyword>OFFLINE</keyword>
       <keyword>ONLINE</keyword>
       <keyword>PCTFREE</keyword>
       <keyword>RENAME</keyword>
       <keyword>RESOURCE</keyword>
+      <keyword>ROLLUP</keyword>
       <keyword>ROW</keyword>
       <keyword>ROWNUM</keyword>
       <keyword>SHARE</keyword>
+      <keyword>SIBLINGS</keyword>
+      <keyword>START[ \t]+WITH</keyword>
       <keyword>SUCCESSFUL</keyword>
       <keyword>SYNONYM</keyword>
       <keyword>TRIGGER</keyword>
       <keyword>VALIDATE</keyword>
       <keyword>WHERE</keyword>
     </context>
+
     <context id="sql-statements" style-ref="keyword">
       <prefix>^[ \t]*</prefix>
       <keyword>ALTER[ \t]+(CLUSTER|DATABASE|DIMENSION|DISKGROUP|FUNCTION|INDEX(TYPE)?|JAVA|MATERIALIZED[ \t]+VIEW([ \t]+LOG)?|OPERATOR|OUTLINE|PACKAGE|PROCEDURE|PROFILE|RESOURCE[ \t]+COST|ROLE|ROLLBACK[ \t]+SEGMENT|SEQUENCE|SESSION|SYSTEM|TABLE(SPACE)?|TRIGGER|TYPE|USER|VIEW)</keyword>
@@ -431,10 +484,12 @@
       <keyword>SET[ \t]+TRANSACTION</keyword>
       <keyword>TRUNCATE</keyword>
     </context>
+
     <context id="operators" style-ref="keyword">
       <keyword>CONNECT_BY_ROOT</keyword>
       <keyword>MULTISET[ \t]+(EXCEPT|INTERSECT|UNION)</keyword>
     </context>
+
     <context id="conditions" style-ref="keyword">
       <keyword>SOME</keyword>
       <keyword>IS[ \t]+(NOT[ \t]+)?(NAN|INFINITE)</keyword>
@@ -450,15 +505,19 @@
       <keyword>REGEXP_LIKE</keyword>
       <keyword>(NOT[ \t]+)?SUBMULTISET([ \t]+OF)?</keyword>
     </context>
+
     <context id="sql-plus-at-sign" style-ref="some-thing">
       <match>^[ \t]*@</match>
     </context>
+
     <context id="sql-plus-double-at-sign" style-ref="some-thing">
       <match>^[ \t]*@@</match>
     </context>
+
     <context id="sql-plus-slash" style-ref="some-thing">
       <match>^[ \t]*/</match>
     </context>
+
     <context id="sql-plus-commands" style-ref="some-thing">
       <prefix>^[ \t]*</prefix>
       <keyword>ACC(EPT)?</keyword>
@@ -508,6 +567,7 @@
       <keyword>VAR(IABLE)?</keyword>
       <keyword>WHENEVER[ \t]+(OS|SQL)ERROR</keyword>
     </context>
+
     <context id="sql">
       <include>
         <context ref="oracle-built-in-datatypes"/>
@@ -552,5 +612,6 @@
         <context ref="sql-plus-commands"/>
       </include>
     </context>
+
   </definitions>
 </language>
