@@ -1,3 +1,9 @@
+2007-09-07  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/language-specs/html.lang: Highlight CDATA.
+	* gtksourceview/language-specs/sql.lang: some missing keywords. Patch
+	by Stefan Schweizer.
+
 2007-09-06  Paolo Borelli  <pborelli@katamail.com>
 
 	* gtksourceview/language-specs/octave.lang: try to not misdetect
